# screech

./: .gitignore  README.md  WORK_REMAINING_REPORT.md  advanced_countermeasures.md  arm@192.168.1.36  data_obfuscation_strategy.md  meson.build  meson_options.txt  test_integrity_conflicts.sh  test_obfuscation.sh  test_remote_logger.cpp
backup_20250724_210348/: cross-macos-arm64.txt  meson.build  pcapplusplus_meson.build  screech.cpp
behavior_filter/: BehaviorFilter.h
deployment-package/: DEPLOYMENT_INSTRUCTIONS.txt  README.md  deploy_on_mac.sh  screech_zoom_mimicry  zoom_entitlements.plist
docs/: CERTIFICATE_GUIDE.md  README_EBPF_MIGRATION.md  README_LINUX_EBPF.md  STEALTH_ANALYSIS.md  advanced_evasion_strategies.md  more_macos_malware_detection_considerations.md  warp_feature_request.md
examples/: example_usage.c
include/core/: debug_logging.h  monitoring_interface.h  monitoring_registry.h
include/obfuscation/: api_misdirection.h  call_diversification.h  cert_obfuscation.h  direct_syscalls.h  function_obfuscation.h  obfuscation_config.h  obfuscation_engine.h  stealth_logging.h  string_obfuscation.h  timing_obfuscation.h  variant_generator.h
include/platform/: macos_obfuscation_bridge.h
libs/debug_logging/: debug_logging.c
libs/event_logger/: EventLogger.cpp  EventLogger.h
libs/libpcap_monitor/: NetworkMonitor.cpp  NetworkMonitor.h
libs/macos/file_monitor/: FileMonitor.h  FileMonitor.mm
libs/macos/native_network_extension_monitor/include/: screech_macos_network.h
libs/macos/native_network_extension_monitor/src/: screech_macos_network.mm
libs/macos/process_monitor/: ProcessMonitor.h  ProcessMonitor.mm
libs/obfuscation/: ObfuscationEngine.h  diversified_calls.h
libs/obfuscation/linux/: function_obfuscation.c  string_obfuscation.c
libs/obfuscation/mac/: api_misdirection.c  call_diversification.c  cert_obfuscation.c  direct_syscalls.c  function_obfuscation.c  macos_obfuscation_bridge.m  obfuscation_engine.c  string_obfuscation.c  timing_obfuscation.c  variant_generator.c
libs/remote_logging/: RemoteLogger.h
linux-network-monitor/: create_log_dirs.sh  cross-armv7.txt  main.cpp  meson.build  meson_options.txt  screech_ebpf.c  screech_linux_ebpf.cpp  screech_linux_ebpf.h  screech_linux_ebpf_c.c  vmlinux.h
linux-network-monitor/config/: README.md  cross-aarch64.txt  kernel_profile.json  network_tap.nft.template  raspberry_pi_profile.json
linux-network-monitor/scripts/: create_log_dirs.sh  profile_kernel.sh  setup_network_tap.sh
macos-endpoint-security-monitor/: cross-macos-arm64.txt  debug_logging.c  debug_logging.h  main.mm  meson.build
macos-endpoint-security-monitor/libs/endpoint_security_core/: EndpointSecurityCore.h  EndpointSecurityCore.mm
macos-endpoint-security-monitor/libs/event_logger/: EventLogger.cpp  EventLogger.h
macos-endpoint-security-monitor/libs/file_monitor/: FileMonitor.h  FileMonitor.mm
macos-endpoint-security-monitor/libs/ipc_monitor/: IPCMonitor.h  IPCMonitor.mm
macos-endpoint-security-monitor/libs/process_monitor/: ProcessMonitor.h  ProcessMonitor.mm
macos-endpoint-security-monitor/libs/remote_logging/: RemoteLogger.cpp  RemoteLogger.h
screech_network_extension/: EXAMPLE_OUTPUT.md  README.md  deploy_system_analytics.sh  meson_obfuscated.build  meson_vpn_build.build  obfuscation_utils.h
screech_network_extension/MainApp/: ScreechMainApp.entitlements  ScreechMainApp.h  ScreechMainApp.m  SystemAnalyticsService.entitlements  main.m
screech_network_extension/NetworkExtension/: CoreNetworkProvider.h  CoreServiceProvider.entitlements  ExpressVPNProvider.entitlements  ExpressVPNTunnelProvider.m  ScreechFilterDataProvider.h  ScreechFilterDataProvider.m  ScreechNetworkExtension.entitlements  SecureVPNProvider.entitlements  main.m
screech_network_extension/Shared/: AntiHookingFramework.h  AntiHookingFramework.m  ScreechShared.h  ScreechShared.m  SyscallObfuscationExplained.md  SystemFramework.h  SystemFramework.m  VPNMimicryFramework.h  VPNMimicryFramework.m
screech_obfuscation_lib/: ScreechObfuscation.h  ScreechObfuscation.m  cross-macos-arm64.txt  meson.build
scripts/: build_monitor.sh  setup_endpoint_security_rsyslog.sh  setup_raspberry_pi_syslog.sh  setup_raspberry_pi_systemd.sh  test_remote_logging.sh
scripts/certificates/: encrypt_cert.py  generate_csr.sh  process_apple_cert.sh
scripts/deployment/: deploy_screech.sh  install_invisible.sh  install_linux_ebpf.sh  sign_and_deploy.sh
src/core/: detection_examples.cpp  monitoring_registry.cpp  screech.cpp  screech_main.cpp  screech_main.mm  unified_monitor.cpp  unified_monitor_working.cpp  unified_monitor_working_macos.mm
src/obfuscation/: api_misdirection.c  macos_obfuscation_bridge.m  obfuscation_config.c  obfuscation_engine.c  stealth_logging.c  timing_obfuscation.c
src/obfuscation/linux/: obfuscation_engine.c
src/obfuscation/mac/: api_misdirection.c  call_diversification.c  macos_obfuscation_bridge.m  obfuscation_engine.c  stealth_logging.c  string_obfuscation.c  variant_generator.c
src/platform/linux/: screech_ebpf.c  screech_linux_ebpf.cpp  vmlinux.h
src/platform/macos/: screech_dtrace.d
subprojects/: pcapplusplus.wrap
subprojects/screech_obfuscation_lib/: ScreechObfuscation.h  ScreechObfuscation.m
tests/: test.c  test_macos
